--- a/.github/workflows/deploy-to-aks.yml
+++ b/.github/workflows/deploy-to-aks.yml
@@ -67,7 +67,7 @@ jobs:
       - name: GitHub CodeQL Analysis Init
         uses: github/codeql-action/init@v3
         with:
-          languages: javascript
+          languages: typescript
 
       - name: GitHub CodeQL Analysis
         uses: github/codeql-action/analyze@v3
