--- a/.github/workflows/deploy-to-private-aks.yaml
+++ b/.github/workflows/deploy-to-private-aks.yaml
@@ -109,7 +109,7 @@ jobs:
         run: |
           helm registry login ${{ env.ACR_NAME }}.azurecr.io \
             --username ${{ secrets.ACR_USERNAME }} \
-            --password ${{ secrets.ACR_PASSWORD }}
+            --password ${{ secrets.P_ACR_PASSWORD }}
 
           helm push packaged/helm-${{ steps.version.outputs.tag }}.tgz oci://${{ env.ACR_NAME }}.azurecr.io/helm
 
