--- a/.github/workflows/deploy-to-private-aks.yaml
+++ b/.github/workflows/deploy-to-private-aks.yaml
@@ -83,8 +83,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.ACR_NAME }}.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          username: ${{ secrets.P_ACR_USERNAME }}
+          password: ${{ secrets.P_ACR_PASSWORD }}
 
       - name: Build and push image to ACR
         uses: docker/build-push-action@v5
@@ -108,7 +108,7 @@ jobs:
       - name: Push Helm chart to ACR via OCI
         run: |
           helm registry login ${{ env.ACR_NAME }}.azurecr.io \
-            --username ${{ secrets.ACR_USERNAME }} \
+            --username ${{ secrets.P_ACR_USERNAME }} \
             --password ${{ secrets.P_ACR_PASSWORD }}
 
           helm push packaged/helm-${{ steps.version.outputs.tag }}.tgz oci://${{ env.ACR_NAME }}.azurecr.io/helm
