--- a/.github/workflows/deploy-to-private-aks.yaml
+++ b/.github/workflows/deploy-to-private-aks.yaml
@@ -133,7 +133,7 @@ jobs:
         run: |
           helm upgrade --install nextjsbasic ./helm \
             --namespace default \
-            --atomic --force
+            --timeout 10m0s
 
       - name: Wait for pod to be ready
         run: |
